--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "14.15.4",
+    "npm": "^6.14.10"
+  },
   "dependencies": {
     "axios": "0.19.0",
     "firebase": "6.0.2",
