--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "engines": {
-    "node": "8.11.0",
+    "node": "8.13.0",
     "npm": "^6.14.10"
   },
   "dependencies": {
     "axios": "0.19.0",
+    "bootstrap": "5.1.0",
     "firebase": "8.0.2",
     "node-sass": "4.12.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^16.8.6",
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
